--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,7 +51,6 @@
 }
 
 .description {
-  margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -74,8 +73,8 @@
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
+  margin: 4rem 0;
+  padding: 0rem 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
@@ -93,7 +92,6 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
 
